RELEASE v1.1 (#22)
* update target branch name pettern

* Sonarプラグインの削除（YAMLから直接呼び出しへ変更）

* Sonarプラグインを直接呼出し

* Sonarプラグインを直接呼出し

* 改行コードエスケープ文字の修正

* ダブルクオーテーション漏れ修正

* Fix issue#2 (#7)

* fix code smell

* fix code smell

* Fix issue#3 (#8)

* 条件分岐の多いメソッドを分割

* 複雑なWHILE-IF文を簡略（？）化

* remove comments

* Fix workflow yaml (#9)

* プルリク実行時の対象ブランチを修正

* プルリク時には品質検証は実施しない（マージしたあとする）

* mainブランチ更新時にもフルテスト＆コードスキャンを実施する（バッジ表示のため） (#11)

* fix code smells (#12)

* Fix issue#13,#14 (#15)

* fix code smell

* fix code smells

* Fix issue#16 (#17)

* noopenerの追加

* rename BackingBean.java to IndexBackingBean.java

* add nonce bean for CSP

* fix code

* Lombokでソース圧縮 (#19)

* Fix pom.xml (#20)

* ローカルでもUT実施

* VERSION 1.1